--- a/src/AaxAudioConverter/SettingsForm.de.resx
+++ b/src/AaxAudioConverter/SettingsForm.de.resx
@@ -127,17 +127,14 @@
   <data name="btnOK.Location" type="System.Drawing.Point, System.Drawing">
     <value>379, 15</value>
   </data>
-  <data name="btnOK.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="panel1.Location" type="System.Drawing.Point, System.Drawing">
-    <value>0, 479</value>
+    <value>0, 516</value>
   </data>
   <data name="panel1.Size" type="System.Drawing.Size, System.Drawing">
     <value>466, 50</value>
   </data>
-  <data name="panel1.ToolTip" xml:space="preserve">
-    <value />
+  <data name="tableLayoutPanel1.Size" type="System.Drawing.Size, System.Drawing">
+    <value>466, 516</value>
   </data>
   <data name="lblUsrActCode.Location" type="System.Drawing.Point, System.Drawing">
     <value>18, 77</value>
@@ -149,17 +146,11 @@
     <value>Benutzereingabe für 
 Audible Aktivierungscode</value>
   </data>
-  <data name="lblUsrActCode.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="lblFfmpegLoc.Location" type="System.Drawing.Point, System.Drawing">
     <value>37, 7</value>
   </data>
   <data name="lblFfmpegLoc.Text" xml:space="preserve">
     <value>Pfad zu FFmpeg.exe</value>
-  </data>
-  <data name="lblFfmpegLoc.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="btnUsrActCode.Location" type="System.Drawing.Point, System.Drawing">
     <value>237, 81</value>
@@ -167,17 +158,11 @@ Audible Aktivierungscode</value>
   <data name="btnUsrActCode.Text" xml:space="preserve">
     <value>Bearbeiten</value>
   </data>
-  <data name="btnUsrActCode.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="btnFfmpegLoc.Location" type="System.Drawing.Point, System.Drawing">
     <value>237, 7</value>
   </data>
   <data name="btnFfmpegLoc.Text" xml:space="preserve">
     <value>Bearbeiten</value>
-  </data>
-  <data name="btnFfmpegLoc.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="lblRegActCode.Size" type="System.Drawing.Size, System.Drawing">
     <value>221, 37</value>
@@ -185,29 +170,17 @@ Audible Aktivierungscode</value>
   <data name="lblRegActCode.Text" xml:space="preserve">
     <value>Audible Manager/App Aktivierungscode(s) </value>
   </data>
-  <data name="lblRegActCode.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="listBoxActCode.Size" type="System.Drawing.Size, System.Drawing">
-    <value>135, 30</value>
-  </data>
-  <data name="listBoxActCode.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="btnRegActCode.Text" xml:space="preserve">
-    <value>Einblenden</value>
-  </data>
-  <data name="btnRegActCode.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="panel2.Location" type="System.Drawing.Point, System.Drawing">
     <value>227, 37</value>
   </data>
   <data name="panel2.Size" type="System.Drawing.Size, System.Drawing">
     <value>239, 37</value>
   </data>
-  <data name="panel2.ToolTip" xml:space="preserve">
-    <value />
+  <data name="listBoxActCode.Size" type="System.Drawing.Size, System.Drawing">
+    <value>135, 30</value>
+  </data>
+  <data name="btnRegActCode.Text" xml:space="preserve">
+    <value>Einblenden</value>
   </data>
   <data name="lblCustTitleChars.Location" type="System.Drawing.Point, System.Drawing">
     <value>34, 188</value>
@@ -215,9 +188,6 @@ Audible Aktivierungscode</value>
   <data name="lblCustTitleChars.Text" xml:space="preserve">
     <value>Zusätzlich gültige Interpunktions-
 zeichen für gefilterten Buchtitel</value>
-  </data>
-  <data name="lblCustTitleChars.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="txtBoxCustTitleChars.Location" type="System.Drawing.Point, System.Drawing">
     <value>237, 193</value>
@@ -247,8 +217,11 @@ Mit Leerzeichen oder Semikolon trennen.</value>
     <value>Benutzerdefinierte Suchwörter für "Teil"
 im Titel mehrteiliger Bücher</value>
   </data>
-  <data name="lblCustPart.ToolTip" xml:space="preserve">
-    <value />
+  <data name="panel3.Location" type="System.Drawing.Point, System.Drawing">
+    <value>227, 111</value>
+  </data>
+  <data name="panel3.Size" type="System.Drawing.Size, System.Drawing">
+    <value>239, 37</value>
   </data>
   <data name="txtBoxPartName.Location" type="System.Drawing.Point, System.Drawing">
     <value>136, 8</value>
@@ -262,23 +235,17 @@ im Titel mehrteiliger Bücher</value>
   <data name="comBoxPartName.Size" type="System.Drawing.Size, System.Drawing">
     <value>120, 21</value>
   </data>
-  <data name="panel3.Location" type="System.Drawing.Point, System.Drawing">
-    <value>227, 111</value>
-  </data>
-  <data name="panel3.Size" type="System.Drawing.Size, System.Drawing">
-    <value>239, 37</value>
-  </data>
-  <data name="panel3.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="lblPartName.Location" type="System.Drawing.Point, System.Drawing">
     <value>34, 114</value>
   </data>
   <data name="lblPartName.Text" xml:space="preserve">
     <value>Präfix für "Teil"-Ordner.</value>
   </data>
-  <data name="lblPartName.ToolTip" xml:space="preserve">
-    <value />
+  <data name="panel4.Location" type="System.Drawing.Point, System.Drawing">
+    <value>227, 222</value>
+  </data>
+  <data name="panel4.Size" type="System.Drawing.Size, System.Drawing">
+    <value>239, 37</value>
   </data>
   <data name="comBoxFlatFolders.Location" type="System.Drawing.Point, System.Drawing">
     <value>36, 9</value>
@@ -288,15 +255,6 @@ im Titel mehrteiliger Bücher</value>
   </data>
   <data name="ckBoxFlatFolders.ToolTip" xml:space="preserve">
     <value>Keine Ordnerhierarchie für Autor und Buchtitel.</value>
-  </data>
-  <data name="panel4.Location" type="System.Drawing.Point, System.Drawing">
-    <value>227, 222</value>
-  </data>
-  <data name="panel4.Size" type="System.Drawing.Size, System.Drawing">
-    <value>239, 37</value>
-  </data>
-  <data name="panel4.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="lblFlatFolders.Location" type="System.Drawing.Point, System.Drawing">
     <value>38, 225</value>
@@ -308,75 +266,8 @@ im Titel mehrteiliger Bücher</value>
     <value>Flache Ordnerstruktur
 und Namensgebung</value>
   </data>
-  <data name="lblFlatFolders.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="lblLang.Location" type="System.Drawing.Point, System.Drawing">
-    <value>102, 451</value>
-  </data>
-  <data name="lblLang.Text" xml:space="preserve">
-    <value>Sprache</value>
-  </data>
-  <data name="lblLang.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="comBoxLang.Location" type="System.Drawing.Point, System.Drawing">
-    <value>237, 452</value>
-  </data>
-  <data name="comBoxLang.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 21</value>
-  </data>
-  <data name="comBoxLang.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="comBoxUpdate.Items" xml:space="preserve">
-    <value>Ausgeschaltet</value>
-  </data>
-  <data name="comBoxUpdate.Items1" xml:space="preserve">
-    <value>Aufforderung zum Herunterladen</value>
-  </data>
-  <data name="comBoxUpdate.Items2" xml:space="preserve">
-    <value>Aufforderung zur Installation</value>
-  </data>
-  <data name="comBoxUpdate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>237, 415</value>
-  </data>
-  <data name="comBoxUpdate.Size" type="System.Drawing.Size, System.Drawing">
-    <value>226, 21</value>
-  </data>
-  <data name="comBoxUpdate.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="lblUpdate.Location" type="System.Drawing.Point, System.Drawing">
-    <value>102, 414</value>
-  </data>
-  <data name="lblUpdate.Text" xml:space="preserve">
-    <value>Online-Update</value>
-  </data>
-  <data name="lblUpdate.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="ckBoxFileAssoc.Location" type="System.Drawing.Point, System.Drawing">
-    <value>237, 381</value>
-  </data>
-  <data name="ckBoxFileAssoc.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="ckBoxExtraMetaFiles.Location" type="System.Drawing.Point, System.Drawing">
     <value>237, 344</value>
-  </data>
-  <data name="ckBoxExtraMetaFiles.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="lblFileAssoc.Location" type="System.Drawing.Point, System.Drawing">
-    <value>42, 373</value>
-  </data>
-  <data name="lblFileAssoc.Text" xml:space="preserve">
-    <value>.aax- und .aa-Dateien mit 
-AaxAudioConverter verknüpfen</value>
-  </data>
-  <data name="lblFileAssoc.ToolTip" xml:space="preserve">
-    <value />
   </data>
   <data name="lblExtraMetaFiles.Location" type="System.Drawing.Point, System.Drawing">
     <value>16, 335</value>
@@ -388,8 +279,11 @@ AaxAudioConverter verknüpfen</value>
     <value>Zusätzliche Dateien für
 Buch-Info und Titelbild</value>
   </data>
-  <data name="lblExtraMetaFiles.ToolTip" xml:space="preserve">
-    <value />
+  <data name="panel5.Location" type="System.Drawing.Point, System.Drawing">
+    <value>230, 262</value>
+  </data>
+  <data name="panel5.Size" type="System.Drawing.Size, System.Drawing">
+    <value>233, 31</value>
   </data>
   <data name="label1.Size" type="System.Drawing.Size, System.Drawing">
     <value>56, 13</value>
@@ -397,31 +291,7 @@ Buch-Info und Titelbild</value>
   <data name="label1.Text" xml:space="preserve">
     <value>sek Dauer</value>
   </data>
-  <data name="label1.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="nudShortChapter.ToolTip" xml:space="preserve">
-    <value>0 um Option auszuschalten</value>
-  </data>
-  <data name="panel5.Location" type="System.Drawing.Point, System.Drawing">
-    <value>230, 262</value>
-  </data>
-  <data name="panel5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>233, 31</value>
-  </data>
-  <data name="panel5.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>56, 13</value>
-  </data>
-  <data name="label2.Text" xml:space="preserve">
-    <value>sek Dauer</value>
-  </data>
-  <data name="label2.ToolTip" xml:space="preserve">
-    <value />
-  </data>
-  <data name="nudVeryShortChapter.ToolTip" xml:space="preserve">
     <value>0 um Option auszuschalten</value>
   </data>
   <data name="panel6.Location" type="System.Drawing.Point, System.Drawing">
@@ -430,8 +300,14 @@ Buch-Info und Titelbild</value>
   <data name="panel6.Size" type="System.Drawing.Size, System.Drawing">
     <value>233, 31</value>
   </data>
-  <data name="panel6.ToolTip" xml:space="preserve">
-    <value />
+  <data name="label2.Size" type="System.Drawing.Size, System.Drawing">
+    <value>56, 13</value>
+  </data>
+  <data name="label2.Text" xml:space="preserve">
+    <value>sek Dauer</value>
+  </data>
+  <data name="nudVeryShortChapter.ToolTip" xml:space="preserve">
+    <value>0 um Option auszuschalten</value>
   </data>
   <data name="label3.Location" type="System.Drawing.Point, System.Drawing">
     <value>16, 262</value>
@@ -440,9 +316,6 @@ Buch-Info und Titelbild</value>
     <value>Kurze Kapitel zwischen Buchteilen
 überspringen (Fortsetzung, Titel/Autor)</value>
   </data>
-  <data name="label3.ToolTip" xml:space="preserve">
-    <value />
-  </data>
   <data name="label4.Location" type="System.Drawing.Point, System.Drawing">
     <value>16, 299</value>
   </data>
@@ -450,22 +323,63 @@ Buch-Info und Titelbild</value>
     <value>Sehr kurze Kapitel am Anfang und
  Ende überspringen, wenn vorhanden </value>
   </data>
-  <data name="label4.ToolTip" xml:space="preserve">
-    <value />
+  <data name="comBoxLang.Location" type="System.Drawing.Point, System.Drawing">
+    <value>237, 489</value>
   </data>
-  <data name="tableLayoutPanel1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>466, 479</value>
+  <data name="comBoxLang.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 21</value>
   </data>
-  <data name="tableLayoutPanel1.ToolTip" xml:space="preserve">
-    <value />
+  <data name="lblLang.Location" type="System.Drawing.Point, System.Drawing">
+    <value>102, 488</value>
+  </data>
+  <data name="lblLang.Text" xml:space="preserve">
+    <value>Sprache</value>
+  </data>
+  <data name="comBoxUpdate.Items" xml:space="preserve">
+    <value>Ausgeschaltet</value>
+  </data>
+  <data name="comBoxUpdate.Items1" xml:space="preserve">
+    <value>Aufforderung zum Herunterladen</value>
+  </data>
+  <data name="comBoxUpdate.Items2" xml:space="preserve">
+    <value>Aufforderung zur Installation</value>
+  </data>
+  <data name="comBoxUpdate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>237, 452</value>
+  </data>
+  <data name="comBoxUpdate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>226, 21</value>
+  </data>
+  <data name="lblUpdate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>102, 451</value>
+  </data>
+  <data name="lblUpdate.Text" xml:space="preserve">
+    <value>Online-Update</value>
+  </data>
+  <data name="lblFileAssoc.Location" type="System.Drawing.Point, System.Drawing">
+    <value>42, 410</value>
+  </data>
+  <data name="lblFileAssoc.Text" xml:space="preserve">
+    <value>.aax- und .aa-Dateien mit 
+AaxAudioConverter verknüpfen</value>
+  </data>
+  <data name="ckBoxFileAssoc.Location" type="System.Drawing.Point, System.Drawing">
+    <value>237, 418</value>
+  </data>
+  <data name="ckBoxLatin1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>237, 381</value>
+  </data>
+  <data name="lblLatin1.Location" type="System.Drawing.Point, System.Drawing">
+    <value>16, 372</value>
+  </data>
+  <data name="lblLatin1.Text" xml:space="preserve">
+    <value>ISO Latin1-Kodierung statt UTF8
+ für .m3u Wiedergabeliste</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>466, 529</value>
+    <value>466, 566</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Grundeinstellungen</value>
-  </data>
-  <data name="$this.ToolTip" xml:space="preserve">
-    <value />
   </data>
 </root>
